Remove updateObjectList because of complexity - fixes in structure + MissionOptionService - add project Roadmap